add_executable (glclogo glclogo.c)
add_executable (tutorial tutorial.c)
add_executable (tutorial2 tutorial2.c)
add_executable (unicode unicode.c)
add_executable (glcdemo glcdemo.c)
add_executable (demo demo.c trackball.c)

target_link_libraries (glclogo GLC ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
target_link_libraries (tutorial GLC ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
target_link_libraries (tutorial2 GLC ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
target_link_libraries (unicode GLC ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
target_link_libraries (glcdemo GLC ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
target_link_libraries (demo GLC ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})